02-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-portfolio-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "asanchez.orsatecsl.es"
    secretName: mi-portfolio-tls
  rules:
  - host: "asanchez.orsatecsl.es"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mi-portfolio-svc
            port:
              number: 80
